# qedl-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: .git-cliff.toml  CONTRIBUTING.md  FUNDING.yml  pull.yml  pull_request_template.md  renovate.json
.github/workflows/: build.yml  checks.yml  release.yml
docs/: architecture.md
qedl/: Cargo.toml  README.md
qedl-cli/: Cargo.toml  README.md  build.rs
qedl-cli/src/: args.rs  devices.rs  main.rs  output.rs
qedl-core/: Cargo.toml  README.md
qedl-core/src/: error.rs  event.rs  lib.rs  session.rs  state.rs  types.rs  util.rs
qedl-core/src/protocol/: firehose.rs  firehose_types.rs  mod.rs  sahara.rs
qedl-core/tests/: error_test.rs  event_test.rs  state_test.rs  types_test.rs
qedl-firehose/: Cargo.toml  README.md
qedl-firehose/src/: client.rs  command.rs  error.rs  lib.rs  response.rs
qedl-firehose/tests/: client_test.rs  command_test.rs  response_test.rs
qedl-firehose/tests/snapshots/: command_test__configure_xml_minimal.snap  command_test__erase_xml.snap  command_test__getstorageinfo_xml.snap  command_test__peek_xml.snap  command_test__poke_xml.snap  command_test__power_off_xml.snap  command_test__power_reset_xml.snap  command_test__program_xml.snap  command_test__program_xml_no_filename.snap  command_test__raw_xml_passthrough.snap  command_test__read_xml.snap
qedl-image/: Cargo.toml  README.md
qedl-image/src/: checksum.rs  error.rs  lib.rs  patch.rs  rawprogram.rs  sparse.rs
qedl-job/: Cargo.toml  README.md
qedl-job/src/: context.rs  error.rs  executor.rs  jobs.rs  lib.rs  reader.rs  testutil.rs
qedl-job/src/parser/: mod.rs  raw_program.rs
qedl-job/tests/: jobs_test.rs  parser_test.rs
qedl-sahara/: Cargo.toml  README.md
qedl-sahara/src/: error.rs  lib.rs  protocol.rs  session.rs
qedl-storage/: Cargo.toml  README.md
qedl-storage/src/: error.rs  gpt.rs  lib.rs  partition.rs
qedl-storage/tests/: gpt_test.rs  partition_test.rs
qedl-transport/: Cargo.toml  README.md
qedl-transport/src/: device.rs  error.rs  lib.rs  mock.rs  port.rs  serial.rs
qedl-transport/tests/: mock_test.rs
qedl/examples/: basic_usage.rs
qedl/src/: client.rs  error.rs  lib.rs
