[workspace]
members = [
    "qedl",
    "qedl-core",
    "qedl-transport",
    "qedl-sahara",
    "qedl-firehose",
    "qedl-storage",
    "qedl-image",
    "qedl-job",
    "qedl-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["baiyao105"]
repository = "https://github.com/baiyao105/qedl-rs"
homepage = "https://github.com/baiyao105/qedl-rs"
keywords = ["qualcomm", "qualcomm-edl", "sahara", "qualcomm-flash"]
categories = ["embedded", "hardware-support"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
bytes = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
quick-xml = "0.37"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-indicatif = "0.3"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
owo-colors = "4"
chrono = "0.4"
indicatif = "0.18"
humansize = "2"
md-5 = "0.11"
hex = "0.4"
crc32fast = "1.4"
# test utilities
pretty_assertions = "1"
tempfile = "3"
insta = "1"

qedl-core      = { path = "qedl-core" }
qedl-transport = { path = "qedl-transport" }
qedl-sahara    = { path = "qedl-sahara" }
qedl-firehose  = { path = "qedl-firehose" }
qedl-storage   = { path = "qedl-storage" }
qedl-image     = { path = "qedl-image" }
qedl-job       = { path = "qedl-job" }
qedl           = { path = "qedl" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
# debug = true
