[workspace]
members = [
    "qedl",
    "qedl-core",
    "qedl-transport",
    "qedl-sahara",
    "qedl-firehose",
    "qedl-storage",
    "qedl-image",
    "qedl-job",
    "qedl-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["baiyao105"]
repository = "https://github.com/baiyao105/qedl-rs"
homepage = "https://github.com/baiyao105/qedl-rs"
keywords = ["qualcomm", "qualcomm-edl", "sahara", "qualcomm-flash"]
categories = ["embedded", "hardware-support"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
bytes = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
quick-xml = "0.37"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-indicatif = "0.3"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
owo-colors = "4"
chrono = "0.4"
indicatif = "0.18"
humansize = "2"
md-5 = "0.11"
sha2 = "0.11"
hex = "0.4"
crc32fast = "1.4"
serde_json = "1"
# test utilities
pretty_assertions = "1"
tempfile = "3"
insta = "1"

qedl-core      = { version = "0.2.1", path = "qedl-core" }
qedl-transport = { version = "0.2.1", path = "qedl-transport" }
qedl-sahara    = { version = "0.2.1", path = "qedl-sahara" }
qedl-firehose  = { version = "0.2.1", path = "qedl-firehose" }
qedl-storage   = { version = "0.2.1", path = "qedl-storage" }
qedl-image     = { version = "0.2.1", path = "qedl-image" }
qedl-job       = { version = "0.2.1", path = "qedl-job" }
qedl           = { version = "0.2.1", path = "qedl" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
# debug = true
