[package]
name = "qedl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and error definitions for QEDL"

[features]
default = []
gui = []

[dependencies]
thiserror.workspace = true
quick-xml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
