[package]
name = "qedl-firehose"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Qualcomm Firehose XML command engine"

[dependencies]
qedl-core.workspace = true
qedl-transport.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
quick-xml.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
qedl-transport.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
insta.workspace = true
pretty_assertions.workspace = true
