[package]
name = "qedl-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPT parsing and partition operations for Qualcomm EDL"

[dependencies]
qedl-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
crc32fast.workspace = true
